test/testData/parser/negative/restrict_kw.c


restrict int x;

int * restrict y;


restrict int foo() { return 42; }

restrict int * restrict z;

int * restrict restrict zz;
